Disable some github action in fork

--- a/.github/workflows/download-translations-from-crowdin.yml
+++ b/.github/workflows/download-translations-from-crowdin.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         branch: ['master', 'release-1.2']
+    if: github.repository == 'xournalpp/xournalpp'
     runs-on: ubuntu-latest
     permissions:
       contents: write
